--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,13 +2,11 @@
   "dependencies": {
     "com.unity.ai.navigation": "1.1.4",
     "com.unity.collab-proxy": "2.0.7",
-    "com.unity.editorcoroutines": "1.0.0",
+    "com.unity.feature.development": "1.0.1",
     "com.unity.feature.vr": "1.0.0",
-    "com.unity.ide.visualstudio": "2.0.21",
     "com.unity.learn.iet-framework": "3.1.3",
     "com.unity.probuilder": "5.1.1",
     "com.unity.render-pipelines.universal": "14.0.8",
-    "com.unity.test-framework": "1.3.9",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
     "com.unity.visualscripting": "1.9.0",
